@@ -1,3 +1,9 @@
+2005-03-17  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b9
+
+	* Fix: b8 was senseless. Also removed a second senseless check.
+
+	* Change: Moved backup_albums.php to tools/ folder.
+
 2005-03-17  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b8
 
 	* Fix: Adminpage can be there for non admins, but for user you can modify users.
